@@ -54,6 +54,8 @@ importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,pgamma)
 importFrom(stats,pnorm)
+importFrom(stats,qgamma)
+importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
