@@ -6,10 +6,14 @@ o FIX: naming in `EGA`
 
 o FIX: output network matrix in `EGA` when data are input
 
+o UPDATE: citation version
+
+o UPDATE: `node.redundant` now provides a full plot of redundancies detected, descriptive statistics including the critical value, and the distribution the significant values were determined from
+
 
 Changes in version 0.9.6
 
-o UPDATE: `LCT` updated with deep learning neural network implementation
+o UPDATE: `LCT` updated with neural network implementation
 
 
 Changes in version 0.9.5
